08-argo-rollouts/01-argo-rollouts-demo.yaml
# CopyRight: MageEdu <http://www.magedu.com>
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-spring-boot-helloworld
spec:
  replicas: 10                        # 运行的 Pod 实例数量，默认为 1；
  strategy:                           # 更新策略，支持 canary 和 blueGreen 两种
    canary:                           # 这里采用金丝雀
      steps:                          # canary 更新起见要执行的步骤
      - setWeight: 10 
      - pause: {}                     # 执行完第一步的更新以后，就会暂停，不指定暂停时间，就需要手动继续,kubectl argo rollouts promote rollouts-spring-boot-helloworld(rolloutsName)
      - setWeight: 20
      - pause: {duration: 20}
      - setWeight: 30
      - pause: {duration: 20}
      - setWeight: 40
      - pause: {duration: 20}
      - setWeight: 60
      - pause: {duration: 20}
      - setWeight: 80
      - pause: {duration: 20}
  revisionHistoryLimit: 5                   # 更新历史中保留的 ReplicaSet Revision 数量
  selector:                                 # 标签选择器,用于筛选 Pod 对象
    matchLabels:
      app: spring-boot-helloworld
  template:                                 # ReplicaSet 模板对象
    metadata:
      labels:
        app: spring-boot-helloworld
    spec:
      containers:
      - name: spring-boot-helloworld
        image: ikubernetes/spring-boot-helloworld:v0.9.2
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 50m
        livenessProbe:
          httpGet:
            path: '/'
            port: 80
            scheme: HTTP
          initialDelaySeconds: 3
        readinessProbe:
          httpGet:
            path: '/'
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-helloworld
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: spring-boot-helloworld
